@@ -280,6 +280,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/configdialog.cpp: whitespace only.
     - src/onmainwindow.{cpp,h}: hook PulseManager in - for both OS X and
       Windows.
+    - src/mediawidget.cpp: reflect new capabilities through PulseManager.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
